--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Your awesome title
+title: My PhD page
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Aleksandar Petreski
+  email: petaleksandar@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -17,13 +17,13 @@ minima:
   # generate social links in footer
   social_links:
     twitter: jekyllrb
-    github:  jekyll
+    github:  petaleks
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
     # flickr:   jekyll
     # instagram: jekyll
-    # linkedin: jekyll
+    linkedin: jekyll
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
@@ -51,6 +51,8 @@ minima:
 # this and add the path to the pages in order as they should show up
 #header_pages:
 # - about.md
+
+google_analytics: UA-NNNNNNNN-N
 
 # Build settings
 theme: minima
