--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Aleksandar Petreski
   email: petaleksandar@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Web page of Aleksandar Petreski, PhD in Real Estate Economics and Green Finance. 
+  Web page of Aleksandar Petreski, PhD Candidate in Real Estate Economics and Green Finance. 
   
 # Write an awesome description for your new site here. You can edit this
 # line in _config.yml. It will appear in your document head meta (for
